--- a/esteban.html
+++ b/esteban.html
@@ -1,12 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html>
+    <head> 
+        <title>
+            vamo boca 
+        </title>        
+    </head>
+    <body>
+        <div style="height:33% ;;width: 100%;display: flex;justify-content: center;align-items: center;">
+            <div style="height:100% ;width:33%;background-color: orange;border-radius: 15%;">
+            
+            </div>
     
-</body>
+        </div>
+
+        <div style="height: 33%;width: 100%;display: flex;justify-content:space-between;align-items: center;">
+            <div style="height:100% ;width:33% ;background-color: red;border-radius: 15%;">
+
+            </div>
+
+            <div style="height: 100%;width:33% ;background-color: silver;border-radius:15% ;">
+
+            </div>
+
+        </div>
+
+        <div style="height:33%;width: 100% ;display: flex;justify-content: center;align-items: center;">
+            <div style="height:100%;width:33% ;background-color: steelblue;border-radius: 15%;">
+
+            </div>
+        </div>
+
+    </body>
 </html>
